styles/main.scss
/* ... */
/* ------------------------- */
/* ----- global styles ----- */
/* ------------------------- */
html,
body {
  direction: var(--yc-theme-direction);
  color: var(--yc-neutral-color);
  position: relative;
  min-height: 100vh;
}
.yc-btn span,
.yc-btn,
html,
body {
  font-family: var(--yc-font-family);
}

[style*='z-index: 500; height: 54px; width: 100vw; position: fixed; padding: 4px 16px'] {
  display: none !important;
}
.container {
  max-width: 1440px !important;
  margin: 0 auto;
  padding: 0 20px;
}

input,
textarea,
button,
select,
a {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

a.disabled {
  pointer-events: none;
}

input {
  font-weight: 300 !important;
  border: var(--yc-main-border);

  &.error {
    border-color: var(--yc-error-color) !important;
    outline: 1px solid var(--yc-error-color) !important;
  }

  & + .validation-error {
    color: var(--yc-error-color) !important;
    font-size: 12px;
    font-weight: 600;
    height: 12px;
  }
}

a {
  text-decoration: none;
  color: inherit;
}

label {
  font-size: 14px;
  margin: 12px 0 6px 0;
  display: block;
}

.lead,
.content p {
  font-size: 1.2em !important;
  line-height: 1.6em !important;
}

.border,
.border-b,
.border-t,
.border-l,
.border-r {
  border-color: rgba(0, 0, 0, 0.1) !important;
}

.product-holder:hover .product-title {
  text-decoration: underline;
}

.yc-section-title {
  font-size: 26px;
  margin: 30px auto;
  font-weight: 600;
  opacity: 0.9;
  text-align: center;

  @media screen and (max-width: 768px) {
    font-size: 24px;
    font-weight: 400;
    margin: 20px auto;
  }
}
button {
  background: transparent;
  border: none;
  cursor: pointer;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;

  &:focus {
    outline: none;
  }
}
.yc-btn {
  background: var(--yc-primary-color) !important;
  color: white !important;
  padding: 0 2rem;
  transition: all 0.15s ease-in-out 0s;
  letter-spacing: 1px;
  cursor: pointer;
  pointer-events: auto;
  border: 0;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;

  &:not(.btn-sm) {
    height: 44px;
  }
  & > * {
    color: white !important;
  }
  &.btn-sm {
    padding: 7px 17px;
    font-size: 14px;
  }
  &.btn-sm ion-icon {
    margin-bottom: 2px;
  }
}

.yc-btn-secondary {
  border: 1px solid var(--yc-primary-color);
  color: var(--yc-primary-color);
  padding: 2px 20px;
  width: 70px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 4px;

  .spinner {
    width: 18px;
    height: 18px;
    margin-top: 6px;
  }
}

.yc-btn-secondary--large {
  border: 1px solid var(--yc-primary-color);
  color: var(--yc-primary-color);
  padding: 14px;
  border-radius: 4px;
  display: flex;
  font-weight: 700;
  font-size: 18px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  width: 100%;

  &:hover {
    background: var(--yc-primary-color);
    color: white;
    transition: all .2s ease-in;
  }
}
[dir='rtl'] {
  .yc-btn {
    flex-direction: row-reverse;

    .yc-btn-responsive-icon {
      transform: rotate(180deg);
    }
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
div,
span {
  font-weight: 300;
}

.nice-select .nice-select-dropdown,
.yc-cart .summary-box,
.yc-pagination {
  box-shadow: var(--yc-primary-shadow) !important;
  border: 1px solid #f2f2f2 !important;
}

input:not([type='radio']),
.nice-select,
.selector-item_label {
  transition: box-shadow 100ms ease;
  padding-left: 13px !important;
  padding-right: 13px !important;
  font-size: 14px !important;
  height: 38px !important;
  line-height: 38px !important;
  outline: none;
}

.product-imgs img {
  transition: box-shadow 100ms ease;
}

.yc-shadow {
  box-shadow: var(--yc-primary-shadow);
}

* {
  box-sizing: border-box;
}

.yc-dropdown {
  border: 1px solid var(--yc-neutral-light-color);
  padding: 10px;
}
.yc-options-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 10px;
}
.yc-options-item {
  padding: 15px;
  font-size: 14px;
  line-height: 120%;
  font-weight: 400;
  border: 1px solid #BDBDBD;
  border-radius: 8px;
  cursor: pointer;

  &.active {
    font-weight: 700;
  }
}

.yc-image-options-list {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 16px;

  .yc-image-options-item {
    aspect-ratio: 1;
    width: 62px;
    height: 52px;
    padding: 3px;
    border: 1px solid var(--yc-neutral-light-color);
    border-radius: 4px;
    cursor: pointer;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }
}

.yc-upload {
  border: 1px dashed var(--yc-neutral-light-color);
  color: var(--yc-neutral-color);
  width: 100%;
  height: 120px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 8px;
  gap: 12px;
  font-weight: 300;
  font-size: 12px;
  line-height: 120%;
  cursor: pointer;

  input {
    display: none;
  }

  .upload-icon {
    width: 22px;
    height: 22px;
    color: #A7A7A7;
  }
}

.yc-number {
  padding: 10px 25px;
  border: 1px solid var(--yc-neutral-light-color);
}
/* ... */

